<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.github.abdularis.civ.CircleImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <me.trung.projectdemotwo.custom_control.CustomBackgroundTextInputLayout
            android:id="@+id/textinput_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/hint_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/hintemail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:textColorHint="@color/textcolor">

            </android.support.design.widget.TextInputEditText>
        </me.trung.projectdemotwo.custom_control.CustomBackgroundTextInputLayout>

        <me.trung.projectdemotwo.custom_control.CustomBackgroundTextInputLayout
            android:id="@+id/textinput_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/hint_appearance">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/hintpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textColorHint="@color/textcolor" />
        </me.trung.projectdemotwo.custom_control.CustomBackgroundTextInputLayout>

        <CheckBox
            android:id="@+id/ckboxRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:buttonTint="#00574B"
            android:text="Remember Email and Password?"
            android:textColor="#3D5CFA" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_save_add_task"
            android:text="@string/textlogin"
            android:textColor="@color/textcolor" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvlinkRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/textnotmember"
            android:textColor="@color/textcolorlink"
            android:textSize="16dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvlinkforgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_forgot_password"
            android:textColor="@color/textcolorlink"
            android:textSize="16dp" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>